# dunnhumby_analysis

./: .gitattributes  .gitignore  README.md  environment.yml  product_selection (1).py  product_selection.ipynb  setup.cfg  setup.py  train.py
.github/workflows/: try_unzip.yml
cfg/: env1_cfg.yaml
data/: data.md
notebooks/: clean_dataset.ipynb
outputs/2022-12-04/10-18-11/.hydra/: config.yaml  hydra.yaml
src/data/: dunnhumby.py
tests/: test_check.py
