[metadata]
name = src
version = 0.0.1
url = https://github.com/YuXia-SR/dunnhumby_analysis
author = Yu Xia
description = Twinning
long_description = file: README.md
long_description_content_type='text/x-rst',

[options]
packages = find:
python_requires = >=3.9
install_requires =
dependency_links=

[options.packages.find]
where = 
include = 
    src*

[options.extras_require]
dev =

[options.entry_points]
console_scripts = 
    preprocess = train:preprocess
